force-app/main/default/objects/SCOC__BusinessAttribute__c/SCOC__BusinessAttribute__c.object-meta.xml
<CustomObject>
    <description>Business Attribute</description>
    <label>Business Attribute</label>
    <nameField>
        <displayFormat>BUSATTR-{0000000000}</displayFormat>
        <label>Business Attribute</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>