force-app/main/default/objects/SCOC__BusinessAttribute__c/fields/SCOC__Key__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Key__c</fullName>
    <description>This field contains the key returned in the Business Attribute.</description>
    <label>Key</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>