force-app/main/default/objects/SCOC__BusinessAttribute__c/fields/SCOC__Packet__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Packet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to packet.</description>
    <label>Packet</label>
    <referenceTo>SCOC__Packet__c</referenceTo>
    <relationshipLabel>Business Attribute</relationshipLabel>
    <relationshipName>BusinessAttribute</relationshipName>
    <type>Lookup</type>
</CustomField>