force-app/main/default/objects/SCOC__BusinessAttribute__c/fields/SCOC__Type__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Type__c</fullName>
    <description>The type of this business attribute.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>DECIMAL</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>