force-app/main/default/objects/SCOC__BusinessAttribute__c/fields/SCOC__ValueTranslation__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ValueTranslation__c</fullName>
    <description>The system populates this optional text field to indicate the translated value from the vendor response. By default, it is blank.</description>
    <label>Value Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>