force-app/main/default/objects/SCOC__BusinessAttribute__c/fields/SCOC__VendorLabel__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorLabel__c</fullName>
    <description>This field contains the Vendor Label returned in the Business Attribute.</description>
    <label>Vendor Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>